mac80211: Revert 'KERNEL_MAKEOPTS instead of KERNEL_MAKE_FLAGS'
Causes an issue when enabling NSS feature.

ERROR: modpost: "nss_virt_if_create_sync" "undefined"
ERROR: modpost: "nss_virt_if_destroy_sync"
ERROR: modpost: "nss_virt_if_register"
ERROR: modpost: "nss_virt_if_tx_buf"

--- a/package/kernel/mac80211/Makefile
+++ b/package/kernel/mac80211/Makefile
@@ -437,8 +437,10 @@ ifeq ($(BUILD_VARIANT),smallbuffers)
 	C_DEFINES+= -DCONFIG_ATH10K_SMALLBUFFERS
 endif
 
-MAKE_OPTS:= \
-	$(subst -C $(LINUX_DIR),-C "$(PKG_BUILD_DIR)",$(KERNEL_MAKEOPTS)) \
+C_DEFINES+= -DSTANDALONE_CT
+
+MAKE_OPTS:= -C "$(PKG_BUILD_DIR)" \
+	$(KERNEL_MAKE_FLAGS) \
 	EXTRA_CFLAGS="-I$(PKG_BUILD_DIR)/include $(IREMAP_CFLAGS) $(C_DEFINES) \
 		-I$(STAGING_DIR)/usr/include/qca-nss-drv" \
 	KLIB_BUILD="$(LINUX_DIR)" \
